infra/controllers/argocd/grpc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - name: gateway-traefik-internal
      namespace: traefik-internal
      sectionName: https-wildcard
    - name: gateway-traefik-external
      namespace: traefik-external
      sectionName: https-wildcard
  hostnames: 
    - "cd.sudoceo.com"
  rules:
    - backendRefs:
        - name: argocd-server-grpc
          port: 80
      matches:
        - headers:
            - name: Content-Type
              value: application/grpc
