infra/controllers/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - name: gateway-traefik-internal
      namespace: traefik-internal
      sectionName: https-wildcard
    - name: gateway-traefik-external
      namespace: traefik-external
      sectionName: https-wildcard
  hostnames:
    - "cd.sudoceo.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
